--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,30 @@
-<h1>Test</h1>
+<section class="row-fluid center">
+  <div class="span12">
+    <h1 class="logo fittext">Chelsea <span class="and">&amp;</span> <span class="nick">Nick</span></h1>
+  </div>
+  <div class="span12">
+    <h1 class="subtitle fittext">January 12<sup>th</sup> 2013, New Plymouth</h1>
+  </div>
+</section>
+
+<section class="row-fluid">
+  <div class="span4 padded">
+    
+  </div>
+  <div class="span8 padded">
+    <h2>We're getting married!</h2>
+    <p>It's almost time to start sending out invitations to our big day. Give us your details below</p>
+  </div>
+</section>
+<section class="row-fluid">
+  <div class="span8 padded">
+    <h2>What's this site?</h2>
+    <p>This website will contain all the details of our big day. From the songs used in the service to the gift registry - it will all be here.</p>
+    <p>We'll also send out emails every now and again to keep you in the loop.</p>
+  </div>
+</section>
+<section class="row-fluid center">
+  <div class="span12">
+    <h1 class="subtitle fittext">Your Details</h1>
+  </div>
+</section>
