--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>N4c</title>
+  <title>Chelsea and Nick</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <div class="row-fluid">
+    <div class="span12 background-overlay">
+      <%= yield %>
+    </div>
+  </div>
+</div>
+
 
 </body>
 </html>
