--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,24 +2,23 @@
   <div class="span12">
     <h1 class="logo fittext">Chelsea <span class="and">&amp;</span> <span class="nick">Nick</span></h1>
   </div>
-  <div class="span12">
+  <div class="span12 pad_bottom">
     <h1 class="subtitle fittext">January 12<sup>th</sup> 2013, New Plymouth</h1>
   </div>
 </section>
 
 <section class="row-fluid">
-  <div class="span4 padded">
-    
-  </div>
-  <div class="span8 padded">
+  <div class="span12 padded">
+    <%= image_tag "rings.jpg", :class => "span4 tilt_left", :style => "margin-right: 50px;" %>
     <h2>We're getting married!</h2>
-    <p>It's almost time to start sending out invitations to our big day. Give us your details below</p>
+    <p>It's almost time to start sending out invitations for our big day. Everyone is invited, so make sure to give us your details at the bottom of the page!</p>
   </div>
 </section>
 <section class="row-fluid">
-  <div class="span8 padded">
-    <h2>What's this site?</h2>
-    <p>This website will contain all the details of our big day. From the songs used in the service to the gift registry - it will all be here.</p>
+  <div class="span12 padded">
+    <%= image_tag "tree.jpg", :class => "span4 tilt_right", :style => "float: right" %>
+    <h2>What's this website for?</h2>
+    <p>This website will contain all the details of our big day. Things like photos, the songs used in the service, a way to R.S.V.P, the gift registry - it will all be here.</p>
     <p>We'll also send out emails every now and again to keep you in the loop.</p>
   </div>
 </section>
