--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -29,3 +29,69 @@
 .subtitle{
   font-family: "Lavanderia";
 }
+
+form{
+  
+  .control-group, input[type="text"]{
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+  
+  label{ 
+    font-family: "Lavanderia";
+    font-weight: bold;
+    font-size: 20px;
+  }
+  
+  input[type="text"] { 
+    font-family: "Lavanderia";
+    font-size: 32px;
+    line-height: 40px;
+    height: 60px;
+    font-weight: bold;
+    
+    background: transparent; 
+    border: none;
+    text-align: center;
+    outline: none;
+    box-shadow: none !important;
+    width: 75%;
+    color: #333;
+    
+    &:focus{
+      border-color: transparent;
+      outline: none;
+      background: transparent;
+      border: none;
+    }
+    &::-webkit-input-placeholder {
+      color: #888;
+      font-weight: normal;
+    }
+    &:-moz-placeholder {
+      color: #888;
+      font-weight: normal;
+    }
+  }
+  
+  hr{
+    position: relative;
+    top: -19px;
+    z-index: -1;
+    background: transparent;
+    border: 0;
+    border-bottom: 1px solid #000;
+    width: 85%;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  input[type="submit"]{
+    font-family: "Lavanderia";
+    font-weight: bold;
+    font-size: 30px;
+    width: 30%;
+    height: 50px;
+  }
+}
