--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,10 +24,10 @@
 </section>
 <section class="row-fluid center">
   <div class="span12">
-    <h1 class="subtitle fittext" style="margin-bottom:30px">Your Details...</h1>
+    <h1 class="subtitle your_details fittext" style="margin-bottom:30px">Your Details...</h1>
   </div>
 </section>
-<section class="row-fluid center">
+<section class="row-fluid center form_container">
     <%= simple_form_for @guest, :remote => true do |f| %>
       <div class="row-fluid">
         <div class="span12">
