--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,25 +4,20 @@ $baseLineHeight: 24px;
 @import "bootstrap";
 @import "bootstrap-responsive";
 @import "mixins";
+@import "guests";
 @import "home";
 
 @include font-face(Lavanderia, asset_path('lavanderia-regular', font));
 @include font-face(Lavanderia, asset_path('lavanderia-sturdy', font), bold);
 
-html { 
-	background: asset-url("hands.jpg", image) no-repeat center center fixed; 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-}
+
 html, body, .container{
   height: 100%;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
-.background-overlay{
-  background-color: #fff;
-  background-color: rgba(255,255,255,0.7);
-  height: 100%;
+
+p{
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 img{
