--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,5 +1,5 @@
 html.home { 
-  background: asset-url("hands.jpg", image) no-repeat center center fixed; 
+  background: asset-url("hands_low_res.jpg", image) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
