Allow log in from homepage

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -43,7 +43,7 @@ html.home {
   font-weight: normal;
 }
 
-form.new_guest{
+form.new_session.homepage{
   
   .control-group, input[type="text"]{
     margin-bottom: 0;
