--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,10 @@ p{
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+.navbar{
+  margin-bottom: 0px;
+}
+
 img{
   border: 10px solid white;
 }
