--- a/app/views/home/info.html.erb
+++ b/app/views/home/info.html.erb
@@ -1,1 +1,16 @@
-<h1>Info</h1>
+<section class="row-fluid">
+  <div class="span12 padded">
+    <h1 class="subtitle your_details" style="padding-bottom:30px;">
+      RSVP
+    </h1>
+    <% if current_guest.going_to_reception? %>
+      <p>
+        You are invited to the wedding, reception, and barbequeue the day after!
+      </p> 
+    <% else %>
+      <p>
+        You are invited to the wedding, reception, and barbequeue the day after!
+      </p>
+    <% end %>
+  </div>
+</section>
