--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,45 +1,47 @@
-<section class="row-fluid center">
-  <div class="span12">
-    <h1 class="logo fittext">Chelsea <span class="and">&amp;</span> <span class="nick">Nick</span></h1>
-  </div>
-</section>
-
-<section class="row-fluid">
-  <div class="span12 padded center">
-    <h1 class="subtitle your_details fittext" style="padding-bottom:30px;">
-      We want you at our wedding!
-    </h1>
-    <p>
-      To RSVP and find out more wedding details, enter your email address below, and log in.
-    </p>
-    <p>
-      If you aren't on our list yet, simply email <%= mail_to "rsvp@nickandchelsea2013.com" %>
-    </p> 
-  </div>
-</section>
-
-<% if flash[:error] %>
-  <section class="row-fluid">
-    <div class="span12 center">
-      <h1 class="error subtitle">
-        <%= flash[:error] %>
-      </h1>
+<div class="span12 background-overlay">
+  <section class="row-fluid center">
+    <div class="span12">
+      <h1 class="logo fittext">Chelsea <span class="and">&amp;</span> <span class="nick">Nick</span></h1>
     </div>
   </section>
-<% end %>
 
-<section class="row-fluid center form_container">
-  <%= simple_form_for @session, :url=>session_path, :html => {:class=> "new_session homepage"} do |f| %>
-    <div class="row-fluid">
-      <div class="span12">
-        <%= f.input :email, :as => :string, :label => false, :placeholder => "Email Address" %>
-        <hr />
-      </div>
+  <section class="row-fluid">
+    <div class="span12 padded center">
+      <h1 class="subtitle your_details fittext" style="padding-bottom:30px;">
+        We want you at our wedding!
+      </h1>
+      <p>
+        To RSVP and find out more wedding details, enter your email address below, and log in.
+      </p>
+      <p>
+        If you haven't used our website before, simply email <%= mail_to "rsvp@nickandchelsea2013.com" %>
+      </p> 
     </div>
-    <div class="row-fluid">
-      <div class="span12">
-        <%= f.button :submit, "Log In" %>
+  </section>
+
+  <% if flash[:error] %>
+    <section class="row-fluid">
+      <div class="span12 center">
+        <h1 class="error subtitle">
+          <%= flash[:error] %>
+        </h1>
       </div>
-    </div>
+    </section>
   <% end %>
-</section>
+
+  <section class="row-fluid center form_container">
+    <%= simple_form_for @session, :url=>session_path, :html => {:class=> "new_session homepage"} do |f| %>
+      <div class="row-fluid">
+        <div class="span12">
+          <%= f.input :email, :as => :string, :label => false, :placeholder => "Email Address" %>
+          <hr />
+        </div>
+      </div>
+      <div class="row-fluid">
+        <div class="span12">
+          <%= f.button :submit, "Log In" %>
+        </div>
+      </div>
+    <% end %>
+  </section>
+</div>
