--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,12 @@
   <div class="navbar-inner">
     <a class="brand" href="#">Nick &amp; Chelsea 2013</a>
     <ul class="nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">RSVP</a></li>
+      <li>
+        <%= link_to "Home", root_path %>
+      </li>
+      <li class="active">
+        <%= link_to "RSVP", info_path %>
+      </li>
       <li><a href="#">The Big Day</a></li>
       <li><a href="#">Gift Ideas</a></li>
     </ul>
