--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,13 @@ $baseLineHeight: 24px;
 @include font-face(Lavanderia, asset_path('lavanderia-regular', font));
 @include font-face(Lavanderia, asset_path('lavanderia-sturdy', font), bold);
 
+html{
+  background: asset-url("hands_overlaid_low_res.jpg", image) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 html, body, .container{
   height: 100%;
@@ -24,8 +31,13 @@ p{
   margin-bottom: 0px;
 }
 
-img{
+img.bordered{
   border: 10px solid white;
+}
+
+img.right{
+  float: right;
+  margin: 0 0 20px 20px;
 }
 
 .tilt_left{
@@ -33,6 +45,10 @@ img{
 }
 .tilt_right{
   @include rotate(3deg);
+}
+
+.text-success{
+  color: #46a546;
 }
 
 
