--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
 </div>
 
 <div class="container">
-  <div class="row-fluid">
-    <div class="span12 background-overlay">
+  <div class="row">
+    <div class="span12">
       <%= yield %>
     </div>
   </div>
