--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,17 +1,3 @@
-html.home { 
-  background: asset-url("hands_low_res.jpg", image) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-.background-overlay{
-  background-color: #fff;
-  background-color: rgba(255,255,255,0.7);
-  height: 100%;
-}
-
 .logo{
   font-family: "Lavanderia";
   @include ligatures();
@@ -112,12 +98,22 @@ form.new_session.homepage{
     margin-left: auto;
     margin-right: auto;
   }
-  
-  input[type="submit"]{
-    font-family: "Lavanderia";
-    font-weight: bold;
-    font-size: 30px;
-    min-width: 30%;
-    height: 50px;
+}
+
+input[type="submit"].large{
+  font-family: "Lavanderia";
+  font-weight: bold;
+  font-size: 25px;
+  min-width: 30%;
+  line-height: 50px;
+}
+
+form.edit_guest{
+  label{
+
+    input.boolean[type="checkbox"]{
+      padding: 0;
+      margin: 0;
+    }
   }
 }
