--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,3 @@
-<div class="span12 background-overlay">
   <section class="row-fluid center">
     <div class="span12">
       <h1 class="logo fittext">Chelsea <span class="and">&amp;</span> <span class="nick">Nick</span></h1>
@@ -39,9 +38,8 @@
       </div>
       <div class="row-fluid">
         <div class="span12">
-          <%= f.button :submit, "Log In" %>
+          <%= f.button :submit, "Log In", :class => "large" %>
         </div>
       </div>
     <% end %>
   </section>
-</div>
