--- a/app/views/home/info.html.erb
+++ b/app/views/home/info.html.erb
@@ -1,17 +1,105 @@
-<section class="row-fluid">
-  <div class="span12 padded">
-    <h1 class="subtitle your_details" style="padding-bottom:30px;">
-      RSVP
-    </h1>
-  </div>
-  <div class="span12 padded">
-    <%= simple_form_for current_guest, :html => {:class=> "edit_user "} do |f| %>
-      <%= f.input :rsvp_wedding %>
-      <% if current_guest.going_to_reception? %>
-        <%= f.input :rsvp_reception %>
-      <% end %>
-      <%= f.input :rsvp_bbq %>
-      <%= f.button :submit, "RSVP" %> 
+<section class="row" style="padding-top: 20px;">
+
+  <%= simple_form_for current_guest, :html => {:class=> "edit_guest form-inline"} do |f| %>
+
+    <div class="span12">
+      <h1>The Wedding</h1>
+      <%= image_tag "st_marys_cathedral_taranaki.jpg", :class => "span4 bordered right" %>
+
+      <dl class="dl-horizontal">
+        <dt class="text-success">Are you going?</dt>
+        <dd>
+          <label class="checkbox inline">
+            <input class="boolean optional" id="guest_rsvp_wedding" name="guest[rsvp_wedding]" type="checkbox" value="1">
+          </label>
+        </dd>
+        <dt>Where</dt>
+        <dd><%= link_to "The Taranaki Cathedral Church of St Mary", "http://www.taranakicathedral.org.nz/" %></dd>
+        <dt>When</dt>
+        <dd>2pm, 12<sup>th</sup> January 2012</dd>
+      </dl>
+      <h3>More Information</h3>
+      <p>
+        We will post an order of service when we work one out!
+      </p>
+      <p>
+        St Mary's is located at 37 Vivian Street, New Plymouth. It has some parking, as do the surrounding streets. It is also within walking distance of the town centre.
+      </p>
+    </div>
+
+    <% if current_guest.going_to_reception? %>
+      <div class="span12">
+      <h1>The Reception</h1>
+      <%= image_tag "plymouth.jpg", :class => "span4 bordered right" %>
+
+      <dl class="dl-horizontal">
+        <dt class="text-success">Are you going?</dt>
+        <dd>
+          <label class="checkbox inline">
+            <input class="boolean optional" id="guest_rsvp_reception" name="guest[rsvp_reception]" type="checkbox" value="1">
+          </label>
+        </dd>
+        <dt>Where</dt>
+        <dd>
+          <%= link_to "Quality Hotel Plymouth International", "http://www.plymouth.co.nz/" %><br />
+          Cnr. Courtenay &amp; Leach St,<br />
+          New Plymouth.
+        </dd>
+        <dt>When</dt>
+        <dd>5:30pm, 12<sup>th</sup> January 2012</dd>
+      </dl>
+      <h3>More Information</h3>
+      <p>
+        Unfortunately we can only accommodate invited friends and family. Plus ones and children are most welcome at the barbeque the day after, though! Thanks for understanding.
+      </p>
+    </div>
     <% end %>
+    
+    <div class="span12">
+      <h1>The BBQ</h1>
+      <%= image_tag "bbq.jpg", :class => "span4 bordered right" %>
+
+      <dl class="dl-horizontal">
+        <dt class="text-success">Are you going?</dt>
+        <dd>
+          <label class="checkbox inline">
+            <input class="boolean optional" id="guest_rsvp_bbq" name="guest[rsvp_bbq]" type="checkbox" value="1">
+          </label>
+        </dd>
+        <dt>Where</dt>
+        <dd>
+          <%= link_to "The Sutton House, a.k.a. Kaos Kastle", "http://maps.google.co.nz/maps?q=8+antonia+place,+new+plymouth" %><br />
+          8 Antonia Place,<br />
+          Bell Block.
+        </dd>
+        <dt>When</dt>
+        <dd>From 11am, 13<sup>th</sup> January 2012</dd>
+      </dl>
+      <h3>More Information</h3>
+      <p>
+        This scrumptuous feast, graciously hosted by Chelsea's parents, is open to all. You needn't bring anything except an appetite!
+      </p>
+    </div>
+
+    <div class="span12 center" style="padding: 40px 0 40px 0">
+      <%= f.button :submit, "RSVP", :class => "large btn-success" %> 
+    </div>
+  <% end %>
+
+  <div class="span12">
+    <h3>Questions?</h3>
+    <p>
+      If you're unsure of anything, feel free to email us at <%= mail_to "rsvp@nickandchelsea2013.com" %>.
+    </p>
+  </div>
+
+  <div class="span12">
+    <h3>How to RSVP</h3>
+    <p>
+      Click the tick box for the part(s) of our Wedding that you are able to attend. Then, towards the bottom of the page, click the "RSVP" button.
+    </p> 
+    <p>
+      As well as RSVP-ing, you can also find out more information, including times and locations.
+    </p>
   </div>
 </section>
