--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container">
-  <div class="row-fluid">
+  <div class="row">
     <div class="span12 background-overlay">
       <%= yield %>
     </div>
