--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -14,6 +14,8 @@
 //= require jquery_ujs
 //= require jquery.fittext
 //= require jquery.placeholder.min
+//= require bootstrap-transition
+//= require bootstrap-collapse
 
 jQuery(function($) {
   $(".fittext.logo").fitText(0.6, { minFontSize: '60px' });
