Use yes/no radio buttons instead of a check box, and add a little confirmation message under the RSVP button

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -16,6 +16,7 @@
 //= require jquery.placeholder.min
 //= require bootstrap-transition
 //= require bootstrap-collapse
+//= require home
 
 jQuery(function($) {
   $(".fittext.logo").fitText(0.6, { minFontSize: '60px' });
