--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -109,11 +109,23 @@ input[type="submit"].large{
 }
 
 form.edit_guest{
-  label{
 
-    input.boolean[type="checkbox"]{
-      padding: 0;
-      margin: 0;
-    }
+  .control-group{
+    margin-bottom: 0px;
+
+    label{
+
+      &.radio{
+        padding-top: 0px !important;
+        padding-right: 10px;
+      }
+
+      input.boolean[type="radio"]{
+        padding: 0;
+        margin: 0;
+      }
   }
+  }
+
+  
 }
