--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -78,8 +78,10 @@
 
     <div class="span12 center" style="padding: 40px 0 40px 0">
       <%= f.button :submit, "RSVP", :class => "large btn-success" %>
-      <p>You are RSVPing yes to
-        <span class="rsvp_status">nothing</span>.
+      <p>
+        <small>You are RSVPing yes to
+          <span class="rsvp_status">nothing</span>.
+        </small>
       </p> 
     </div>
   <% end %>
