Set column width on rsvp admin page

--- a/app/views/admin/guests/index.html.erb
+++ b/app/views/admin/guests/index.html.erb
@@ -35,7 +35,7 @@
           <th>Email</th>
           <th>Address</th>
           <th>Reception</th>
-          <th>W/R/B</th>
+          <th style="width:75px;">W/R/B</th>
         </tr>
       </thead>
       <tbody>
