Hopefully make the wording more clear

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,11 +10,11 @@
         We want you at our wedding!
       </h1>
       <p>
-        To RSVP and find out more wedding details, enter your email address below, and log in.
+        If you haven't used our website before, simply email <%= mail_to "rsvp@nickandchelsea2013.com" %>
       </p>
       <p>
-        If you haven't used our website before, simply email <%= mail_to "rsvp@nickandchelsea2013.com" %>
-      </p> 
+        Otherwise, log in below. You can then RSVP and find out more wedding details.
+      </p>
     </div>
   </section>
 
