Reword the bbq description

--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -73,7 +73,9 @@
       <p>
         This scrumptuous feast, graciously hosted by Chelsea's parents, is open to all. You needn't bring anything except an appetite!
       </p>
-      <p>Additional guests are welcome.</p>
+      <p>
+        This is an opportunity for everyone to come together, including those who we wished we could have invited to the reception. Significant others, friends, and family are most welcome.
+      </p>
     </div>
 
     <div class="span12 center" style="padding: 40px 0 40px 0">
