Reword the footer a bit

--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -89,16 +89,16 @@
   <% end %>
 
   <div class="span12">
-    <h3>Questions?</h3>
+    <h3>Need to get in touch?</h3>
     <p>
-      If you're unsure of anything, feel free to email us at <%= mail_to "rsvp@nickandchelsea2013.com" %>.
+      If you have any questions, comments, or feedback, feel free to email us at <%= mail_to "rsvp@nickandchelsea2013.com" %>.
     </p>
   </div>
 
   <div class="span12">
     <h3>How to RSVP</h3>
     <p>
-      Click the tick box for the part(s) of our Wedding that you are able to attend. Then, towards the bottom of the page, click the "RSVP" button.
+      Click "Yes" for the part(s) of our Wedding that you are able to attend, and "No" for the parts you can't. Then, towards the bottom of the page, click the "RSVP" button.
     </p> 
     <p>
       As well as RSVP-ing, you can also find out more information, including times and locations.
