--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,7 @@
             <ul class="nav">
               <%= nav_link "Home", root_path %>
               <%= nav_link "RSVP", rsvp_path %>
-              <%= nav_link "Accommodation", "#", 
-                :class => "coming_soon", 
-                :data => {
-                  :content => "We have a special deal if you need a place to stay. Check back soon."
-              } %>
+              <%= nav_link "Accommodation", accommodation_path %>
               <%= nav_link "Gift Registry", "#", 
                 :class => "coming_soon", 
                 :data => {
