--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,46 +9,33 @@
 </head>
 <body>
 <% if current_guest %>
-  <div class="navbar navbar row">
+  <div class="navbar">
     <div class="navbar-inner">
       <div class="container">
-        <div class="span12">
-          <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-
-          <a class="brand" href="#">Nick &amp; Chelsea 2013</a>
-
-          <!-- Everything you want hidden at 940px or less, place within here -->
-          <div class="nav-collapse">
-            <ul class="nav">
-              <%= nav_link "Home", root_path %>
-              <%= nav_link "RSVP", rsvp_path %>
-              <%= nav_link "Accommodation", accommodation_path %>
-              <%= nav_link "Gift Registry", "#", 
-                :class => "coming_soon", 
-                :data => {
-                  :content => "We're writing a list and checking it twice. Check back soon."
-              } %>
-            </ul>
-            <ul class="nav pull-right">
-              <li title="<%= current_guest.name %>">
-                <p class="navbar-text">
-                  <%= truncate current_guest.name, length: 35 %>
-                </p>
-              </li>
-              <li class="divider-vertical"></li>
-              <li>
-                <%= link_to session_path, :action => 'destroy', :method => 'delete' do %>
-                  <i class="icon-off icon-white"></i> Logout
-                <% end %>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <a class="brand" href="#">Nick &amp; Chelsea 2013</a>
+        <ul class="nav">
+          <%= nav_link "Home", root_path %>
+          <%= nav_link "RSVP", rsvp_path %>
+          <%= nav_link "Accommodation", accommodation_path %>
+          <%= nav_link "Gift Registry", "#", 
+            :class => "coming_soon", 
+            :data => {
+              :content => "We're writing a list and checking it twice. Check back soon."
+          } %>
+        </ul>
+        <ul class="nav pull-right">
+          <li title="<%= current_guest.name %>">
+            <p class="navbar-text">
+              <%= truncate current_guest.name, length: 35 %>
+            </p>
+          </li>
+          <li class="divider-vertical"></li>
+          <li>
+            <%= link_to session_path, :action => 'destroy', :method => 'delete' do %>
+              <i class="icon-off icon-white"></i> Logout
+            <% end %>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
