Add info on Ducks and Drakes hotel

--- a/app/views/home/accommodation.html.erb
+++ b/app/views/home/accommodation.html.erb
@@ -2,7 +2,7 @@
   <div class="span12">
     <h1>Accommodation</h1>
     <p>
-      Here are some centrally located accommodation options. If you know of other people who are going, you might like to get a place together to save some moolah!
+      Here are two centrally located accommodation options. You can also use Google to find <%= link_to "many other options", "https://www.google.com/search?btnG=1&pws=0&q=new+plymouth+accommodation" %>.
     </p>
   </div>
 </section>
@@ -11,7 +11,7 @@
 
 <section class="row">
   <div class="span12">
-    <%= image_tag "http://www.plymouth.co.nz/~images/content/2323Pic1.jpg", :class => "bordered right" %>
+    <%= image_tag "http://www.plymouth.co.nz/~images/content/2323Pic1.jpg", :class => "bordered span3 right" %>
     <h2>The Plymouth Hotel</h2>
     <p><%= link_to "The Quality Hotel Plymouth International", "http://plymouth.co.nz" %>, which is hosting our reception, is offering a special deal to anyone attending the wedding. You need to quote <%= link_to "this special offer flier", image_path("plymouth_flier.jpg") %> when making your reservation.</p>
 
@@ -31,9 +31,11 @@
 
 <section class="row">
   <div class="span12">
-    <%= image_tag "http://www.plymouth.co.nz/~images/content/2323Pic1.jpg", :class => "bordered right" %>
-    <h2>Backpackers</h2>
-    <p>If you're looking for something a bit more low-key, this backpackers is a good choice.</p>
+    <%= image_tag "http://www.bbh.co.nz/hostelImages/hi_1925_gal.jpg", :class => "bordered span3 right" %>
+    <h2>Ducks &amp; Drakes Hotel</h2>
+    <p>If you're looking for something a bit more low-key, <%= link_to "Ducks &amp; Drakes Hotel".html_safe, "http://www.ducksanddrakes.co.nz/" %> is a good option. Cheapest if you find some other people going to the wedding, and share a room!</p>
+    <p>Prices range from $30 - $60. You can also get a <%= link_to "BBH Hostel Discount", "http://www.bbh.co.nz/hd115/Ducks-Drakes-Hotel-Backpackers-in-New-Plymouth-New-Zealand.html" %></p>
+    <p>"A fun, funky, affordable New Plymouth Hotel with an inviting atmosphere, friendly personal service, offering a variety of comfortable accommodation from shared rooms and private rooms in the historic main building to your own fabulous Cottage Room opening on to our lush green garden."</p>
   </div>
 </section>
 
