--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,7 @@
           <%= nav_link "Home", root_path %>
           <%= nav_link "RSVP", rsvp_path %>
           <%= nav_link "Accommodation", accommodation_path %>
-          <%= nav_link "Gift Registry", "#", 
-            :class => "coming_soon", 
-            :data => {
-              :content => "We're writing a list and checking it twice. Check back soon."
-          } %>
+          <%= nav_link "Gift Register", gifts_path %>
         </ul>
         <ul class="nav pull-right">
           <li title="<%= current_guest.name %>">
